--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.mthahzan.anonlk.newsfetch.consumer.main.fragments.PostsFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -23,7 +19,9 @@
             android:horizontalSpacing="10dp"
             android:verticalSpacing="10dp"
             android:gravity="center"
-            android:stretchMode="columnWidth"/>
+            android:stretchMode="columnWidth"
+            android:paddingBottom="100dp"
+            android:clipToPadding="false"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
