Added default drawable in case there is no image

--- a/app/src/main/res/layout/fragment_commercials.xml
+++ b/app/src/main/res/layout/fragment_commercials.xml
@@ -20,6 +20,7 @@
             android:verticalSpacing="10dp"
             android:gravity="center"
             android:stretchMode="columnWidth"
+            android:paddingTop="10dp"
             android:paddingBottom="100dp"
             android:clipToPadding="false"/>
 
