--- a/app/src/main/res/layout/content_posts_list.xml
+++ b/app/src/main/res/layout/content_posts_list.xml
@@ -9,4 +9,19 @@
     tools:context="me.mthahzan.anonlk.newsfetch.consumer.posts.PostsListActivity"
     tools:showIn="@layout/activity_posts_list">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="100dp"
+            android:clipToPadding="false"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
